src/test/ui/resolve/levenshtein.stderr
error[E0412]: cannot find type `esize` in this scope
  --> $DIR/levenshtein.rs:5:11
   |
LL | fn foo(c: esize) {} // Misspelled primitive type name.
   |           ^^^^^ help: a primitive type with a similar name exists: `isize`

error[E0412]: cannot find type `Baz` in this scope
  --> $DIR/levenshtein.rs:10:10
   |
LL | type A = Baz; // Misspelled type name.
   |          ^^^ help: an enum with a similar name exists: `Bar`

error[E0412]: cannot find type `Opiton` in this scope
  --> $DIR/levenshtein.rs:12:10
   |
LL | type B = Opiton<u8>; // Misspelled type name from the prelude.
   |          ^^^^^^ help: an enum with a similar name exists: `Option`

error[E0412]: cannot find type `Baz` in this scope
  --> $DIR/levenshtein.rs:16:14
   |
LL |     type A = Baz; // No suggestion here, Bar is not visible
   |              ^^^ not found in this scope

error[E0425]: cannot find value `MAXITEM` in this scope
  --> $DIR/levenshtein.rs:24:20
   |
LL |     let v = [0u32; MAXITEM]; // Misspelled constant name.
   |                    ^^^^^^^ help: a constant with a similar name exists: `MAX_ITEM`

error[E0425]: cannot find function `foobar` in this scope
  --> $DIR/levenshtein.rs:26:5
   |
LL |     foobar(); // Misspelled function name.
   |     ^^^^^^ help: a function with a similar name exists: `foo_bar`

error[E0412]: cannot find type `first` in module `m`
  --> $DIR/levenshtein.rs:28:15
   |
LL |     let b: m::first = m::second; // Misspelled item in module.
   |               ^^^^^ help: a struct with a similar name exists: `First`

error[E0425]: cannot find value `second` in module `m`
  --> $DIR/levenshtein.rs:28:26
   |
LL |     let b: m::first = m::second; // Misspelled item in module.
   |                          ^^^^^^ help: a unit struct with a similar name exists: `Second`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0412, E0425.
For more information about an error, try `rustc --explain E0412`.
